# libcamera

./: .gitignore  .gitlab-ci.yml  Android.mk  README.rst  alphabetical.cpp  headers.cpp  ipu3.yaml  meson.build  meson_cross.mk  meson_options.txt
Documentation/: Doxyfile.in  index.rst  (+4 more)
src/: meson.build
src/android/: camera_device.cpp  camera_device.h  camera_hal_config.cpp  camera_hal_config.h  camera_hal_manager.cpp  meson.build
src/apps/cam/: camera_session.cpp  camera_session.h  drm.cpp  drm.h  kms_sink.cpp  main.cpp  main.h
src/apps/lc-compliance/tests/: capture_test.cpp
src/apps/qcam/: main_window.cpp  main_window.h  viewfinder_qt.cpp  viewfinder_qt.h
src/cam/: buffer_writer.cpp  buffer_writer.h  capture.cpp  capture.h  drm.cpp  drm.h  file_sink.cpp  file_sink.h  file_sink_turbojpeg.cpp  file_sink_turbojpeg.h  frame_sink.cpp  frame_sink.h  kms_sink.cpp  kms_sink.h  main.cpp  main.h  meson.build  turbojpeg_compressor.cpp  turbojpeg_compressor.h
src/gstreamer/: gstlibcameraallocator.cpp  gstlibcameraprovider.cpp  gstlibcamerasrc.cpp
src/ipa/: ipa_vimc.cpp  meson.build
src/ipa/ipu3/: aic.h  aiq.cpp  aiq.h  binary_data.cpp  binary_data.h  ipa_context.cpp  ipa_context.h  ipu3.cpp  ipu3_agc.cpp  ipu3_agc.h  ipu3_awb.cpp  ipu3_awb.h  ipu3_stats.cpp  ipu3_stats.h  meson.build  module.h  parameter_encoder.cpp  parameter_encoder.h
src/ipa/ipu3/aic/: aic.cpp  aic.h  ipu3_isp_pipe.cpp  ipu3_isp_pipe.h  kbl_aic.h  meson.build  parameter_encoder.cpp  parameter_encoder.h
src/ipa/ipu3/aiq/: aiq.cpp  aiq.h  aiq_input_parameters.cpp  aiq_input_parameters.h  aiq_results.cpp  aiq_results.h  binary_data.cpp  binary_data.h  meson.build
src/ipa/ipu3/algorithms/: af.cpp  af.h  agc.cpp  agc.h  algorithm.h  awb.cpp  awb.h  blc.cpp  blc.h  grid.cpp  grid.h  meson.build  shd.cpp  shd.h  tone_mapping.cpp  tone_mapping.h
src/ipa/ipu3/data/: 00ov13858.aiqb  01ov5670.aiqb  meson.build  ov13858_7BAD03T2.aiqb  uncalibrated.yaml
src/ipa/ipu3/stats/: ipa_ipu3_stats.cpp  ipa_ipu3_stats.h  ipu3_all_stats.cpp  ipu3_all_stats.h  meson.build  shared_item_pool.cpp  shared_item_pool.h
src/ipa/libipa/: agc_mean_luminance.cpp  algorithm.cpp  algorithm.h  awb.cpp  camera_sensor_helper.cpp  exposure_mode_helper.cpp  fc_queue.cpp  fc_queue.h  fixedpoint.cpp  fixedpoint.h  histogram.cpp  histogram.h  interpolator.h  ipa_interface_wrapper.cpp  ipa_interface_wrapper.h  lux.cpp  meson.build  module.cpp  module.h  pixel.cpp  pixel.h  pwl.cpp  quantized.h
src/ipa/mali-c55/: ipa_context.h
src/ipa/mali-c55/algorithms/: awb.cpp  lsc.cpp
src/ipa/raspberrypi/: meson.build
src/ipa/raspberrypi/data/: imx519.json
src/ipa/rkisp1/: ipa_context.cpp  ipa_context.h  module.h  rkisp1.cpp
src/ipa/rkisp1/algorithms/: agc.cpp  agc.h  awb.cpp  awb.h  blc.cpp  blc.h  ccm.h  cproc.cpp  dpcc.cpp  lsc.cpp
src/ipa/rpi/: meson.build  rpi.cpp
src/ipa/rpi/cam_helper/: cam_helper.cpp  cam_helper.h  cam_helper_imx290.cpp  cam_helper_imx355.cpp  cam_helper_imx678.cpp  cam_helper_imx708.cpp  meson.build
src/ipa/rpi/common/: ipa_base.cpp  ipa_base.h
src/ipa/rpi/controller/rpi/: agc_channel.cpp
src/ipa/rpi/pisp/: pisp.cpp
src/ipa/rpi/pisp/data/: imx355.json  imx662.json  meson.build
src/ipa/rpi/vc4/data/: imx355.json  imx662.json  meson.build
src/ipa/simple/: ipa_context.h  soft_simple.cpp
src/ipa/simple/algorithms/: awb.cpp
src/ipa/vimc/: meson.build  vimc.cpp
src/lc-compliance/: main.cpp  meson.build  results.cpp  results.h  simple_capture.cpp  single_stream.cpp
src/libcamera/: camera.cpp  camera_manager.cpp  camera_sensor.cpp  camera_sensor_properties.cpp  configuration.cpp  control_ids.yaml  control_ids_core.yaml  controls.cpp  delayed_controls.cpp  egl.cpp  framebuffer.cpp  geometry.cpp  global_configuration.cpp  ipa_context_wrapper.cpp  ipa_interface.cpp  ipa_manager.cpp  json.cpp  log.cpp  matrix.cpp  meson.build  pipeline_handler.cpp  property_ids.yaml  request.cpp  sequence.cpp  stream.cpp  udma_allocator.cpp  utils.cpp  v4l2_device.cpp  v4l2_pixelformat.cpp  v4l2_subdevice.cpp  v4l2_videodevice.cpp  vector.cpp  yaml_parser.cpp
src/libcamera/base/: log.cpp
src/libcamera/converter/: converter_dw100.cpp  converter_dw100_vertexmap.cpp  converter_v4l2_m2m.cpp
src/libcamera/include/: ipa_context_wrapper.h  ipc_unixsocket.h  meson.build  utils.h  v4l2_videodevice.h
src/libcamera/pipeline/: meson.build  raspberrypi.cpp
src/libcamera/pipeline/fake/: fake.cpp  meson.build
src/libcamera/pipeline/imx8-isi/: imx8-isi.cpp
src/libcamera/pipeline/ipu3/: cio2.cpp  cio2.h  frames.cpp  frames.h  imgu.cpp  imgu.h  ipu3.cpp
src/libcamera/pipeline/mali-c55/: mali-c55.cpp
src/libcamera/pipeline/raspberrypi/: raspberrypi.cpp
src/libcamera/pipeline/rkisp1/: rkisp1.cpp
src/libcamera/pipeline/rpi/common/: pipeline_base.cpp
src/libcamera/pipeline/simple/: simple.cpp
src/libcamera/pipeline/uvcvideo/: uvcvideo.cpp
src/libcamera/pipeline/vimc/: vimc.cpp
src/libcamera/pipeline/virtual/: meson.build
src/libcamera/proxy/: ipa_proxy_linux.cpp  ipa_proxy_linux_protocol.h
src/libcamera/proxy/worker/: event_loop.cpp  event_loop.h  ipa_proxy_linux_worker.cpp  meson.build
src/libcamera/sensor/: camera_sensor.cpp  camera_sensor_properties.cpp
src/libcamera/shaders/: bayer_1x_packed.frag  bayer_unpacked.frag  meson.build
src/libcamera/software_isp/: TODO.md  benchmark.cpp  debayer.cpp  debayer.h  debayer_cpu.cpp  debayer_cpu.h  debayer_egl.cpp  debayer_egl.h  software_isp.cpp  swstats_cpu.cpp
src/pinhole/: meson.build
src/py/cam/: cam.py
src/py/examples/: simple-cam.py  simple-continuous-capture.py
src/py/libcamera/: py_main.cpp
src/qcam/: cam_select_dialog.cpp  cam_select_dialog.h  main.cpp  main_window.cpp  main_window.h  meson.build  viewfinder_qt.cpp  viewfinder_qt.h
src/v4l2/: v4l2_camera.cpp  v4l2_camera.h  v4l2_camera_proxy.cpp  v4l2_camera_proxy.h
src/vsp1/: main.cpp  meson.build  options.cpp  options.h  vsp1.cpp  vsp1.h
subprojects/intel/: meson.build
subprojects/intel/ia_imaging/: LICENSE.intel_3a_library
test/cam/: capture-test.sh  meson.build  valgrind-cam.sh
(+158 files in other folders)
