rpi_ipa = shared_module('ipa_rpi',
                        'rpi.cpp',
                        name_prefix : '',
                        include_directories : ipa_includes,
                        dependencies : libcamera_dep,
                        link_with : libipa,
                        install : true,
                        install_dir : ipa_install_dir)
